--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ body, html {
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box; /* Asegura que el padding no incremente el tamaño */
 }
 #sidebar.open { transform: translateX(0); }
 #close-sidebar-btn {
@@ -167,7 +168,7 @@ body, html {
     height: 24px;
 }
 #mode-switcher {
-    margin-top: 20px;
+    flex-shrink: 0; /* Evita que este contenedor se encoja */
     padding-top: 20px;
     border-top: 1px solid #444;
 }
